--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -1,14 +1,14 @@
 name: Deploy to GitHub Pages
 
 on:
-  # Déclenchez le workflow chaque fois que vous poussez vers la branche `main`
-  # Vous utilisez un nom de branche différent ? Remplacez `main` par le nom de votre branche
+  # Trigger the workflow every time you push to the `main` branch
+  # Using a different branch name? Replace `main` with your branch’s name
   push:
     branches: [ master ]
-  # Vous permet d'exécuter ce workflow manuellement à partir de l'onglet Actions sur GitHub.
+  # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
-# Autoriser cette tâche à cloner le dépôt et à créer un déploiement de page
+# Allow this job to clone the repo and create a page deployment
 permissions:
   contents: read
   pages: write
@@ -22,10 +22,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Install, build, and upload your site
         uses: withastro/action@v3
-        with:
-            # path: . # L'emplacement racine de votre projet Astro dans le dépôt. (facultatif)
-            # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 20. (facultatif)
-            # package-manager: yarn # Le gestionnaire de paquets Node qui doit être utilisé pour installer les dépendances et build votre site. Détecté automatiquement en fonction de votre lockfile. (facultatif)
+        # with:
+          # path: . # The root location of your Astro project inside the repository. (optional)
+          # node-version: 20 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
+          # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
   deploy:
     needs: build
