--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,14 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
-      - name: Install, build, and upload your site
-        uses: withastro/action@v3
+      - name: Install dependencies and build the site
+        run: |
+          npm ci
+          npm run build
+      - name: Upload artifact for deployment
+        uses: actions/upload-pages-artifact@v1
         with:
-          path: . # Ensure the root location of your Astro project is correct
-          node-version: 20 # The specific version of Node that should be used to build your site
+          path: dist # Replace with your Astro build output directory (default is `dist`)
 
   deploy:
     needs: build
@@ -32,8 +35,6 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v3
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
